# cuda_hook_demos

./: README.md
ctx_change_overhead/: cross_process_ctx_benchmark.cu  ctx_cross_process_time.py  cuda_context_switch_overhead.cu  data_transfer_benchmark.cu  gpu_worker.cu  log1.txt  log2.txt  main  worker
cuda_demo2/: cuda_context.cu
cuda_hook_demo1/: CMakeLists.txt  build.sh
cuda_hook_demo1/hook_lib/: CMakeLists.txt  cuda_hook.cu
cuda_hook_demo1/test_app/: CMakeLists.txt  test_app.cu
